Add mock values to match real VRA response